--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,14 +3,9 @@
 
 
 :root {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%;
-    text-shadow: -1.5099999904632568px 2.259999990463257px 0.75px rgba(0, 0, 0, 0.10);
-
     --fs-huge: 164px;
     --fs-large: 36px;
+    --fs-large-smaller: 32px;
     --fs-heading: 28px;
     --fs-normal: 24px;
     --fs-stats: 22px;
@@ -22,6 +17,23 @@
     --fw-bold: 600;
 
 // temporary dev styles
-    background: linear-gradient(48deg, #082276 7.07%, #030F34 97.3%), #082276;
-    color: white;
+
+}
+
+* {
+
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%;
+    text-shadow: -1.5px 2.6px 0.75px rgba(0, 0, 0, 0.10);
+}
+
+html {
+    background: linear-gradient(249deg, #F0B5CE 0%, #8C6BAE 100%);
+    color: white; 
+
+    &.dark {
+        background: linear-gradient(48deg, #082276 7.07%, #030F34 97.3%), #082276;
+    }
 }
