#20921410 adapt some components for mobile

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,6 +4,7 @@
 
 :root {
     --fs-huge: 164px;
+    --fs-huge-smaller: 96px;
     --fs-large: 36px;
     --fs-large-smaller: 32px;
     --fs-heading: 28px;
@@ -15,8 +16,6 @@
     --fw-normal-thiner: 300;
     --fw-normal: 400;
     --fw-bold: 600;
-
-// temporary dev styles
 
 }
 
