#21020111 add quality monitor component

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,6 +11,7 @@
     --fs-normal: 24px;
     --fs-stats: 22px;
     --fs-stats-smaller: 19px;
+    --fs-small: 16px;
 
     --fw-thin: 100;
     --fw-normal-thiner: 300;
